src/components/blocks/newsletter-signup/_newsletter-signup.scss
.b-newsletter {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;

  &--footer {
    background-color: siteColor(vam-black);
    border-bottom: 1px solid siteColor(vam-grey-4);
    color: siteColor(vam-white);
    margin: auto;
  }

  background-color: siteColor(vam-grey-5);
  color: siteColor(vam-black);
  margin: 25px 0;
  overflow: hidden;
  position: relative;
  width: 100%;

  @include bpMinXSmall {
    flex-direction: row;
  }

  @include bpMinLarge {
    background-color: transparent;
  }

  &__logo {
    color: siteColor(vam-grey-4);
    height: 200px;
    opacity: .35;
    position: absolute;
    right: 0;
    top: 0;
    width: 280px;

    @include bpMinXSmall {
      height: 450px;
      right: -80px;
      top: -80px;
      width: calc(450px * 1.58);

      & svg {
        height: 100%;
        width: 100%;
      }
    }
    @include bpMinLarge {
      background-color: siteColor(vam-grey-5);
      opacity: 1;
      right: 0;
      width: 50%;

      svg {
        -webkit-filter: invert(100%);
        filter: invert(100%);
        height: 120%;
        margin-top: -5%;
      }

      @supports (mask-repeat: repeat) {
        height: 100%;
        mask-image: url('https://s3-eu-west-1.amazonaws.com/vanda-production-assets/static/valogo_mask.svg');
        mask-position: 20% 73%;
        mask-repeat: no-repeat;
        mask-size: 131%;
        top: 0;

        svg {
          display: none;
        }
      }
    }
  }

  &__form {
    margin: auto;
    max-width: 650px;
    padding: 30px 10px;
    position: relative;
    width: 100%;

    &--component {
      max-width: none;
    }

    &--footer {
      &-etc {
        border-bottom: 1px solid siteColor(vam-grey-2);
        @include bpMinSmall {
          border-bottom: 1px solid siteColor(vam-grey-4);
        }
      }
      &-main {
        border-bottom: 1px solid siteColor(vam-grey-4);
      }

      margin: 0;
      max-width: none;
      padding: 0 0 31px;
    }

    @include bpMinSmall {
      max-width: 100%;
      padding: 30px 0 30px 55px;
      &--component {
        padding: 30px 0 25px 55px;
      }
      &--footer {
        padding: 20px 0 30px;
      }
    }

    @include bpMinLarge {
      background-color: siteColor(vam-grey-5);
      margin: 0;
      width: 50%;
      
      &--footer {
        background-color: siteColor(vam-black);
        margin: 0 0 10px;
      }

      &--component {
        background-color: transparent;
      }

      &--footer, &--component {
        width: 100%;
      }
    }

    &-fields {
      @include bpMinXSmall {
        display: flex;
        flex-direction: row;
        width: 100%;
      }
      &--footer {
        @include bpMinMedium {
          justify-content: flex-end;
        }
      }
      &--component {
        display: flex;
        flex-direction: row;
        justify-content: center;
        margin-bottom: 10px;
        width: 100%;
      }

      &-field {
        @include typeSetting(4, regular);
        border: 1px solid white;
        border-radius: 2px;
        padding: 15px;
        width: 100%;

        &--component {
          height: 50px;
        }

        &--footer {
          height: 50px;
          margin-right: 3px;
          max-width: none;
          text-align: left;
          width: calc(100% - 129px);
        }

        &[aria-invalid="true"] {
          border-color: siteColor(alert-red);
        }

        &::placeholder {
          color: siteColor(vam-grey-3);
          opacity: 1;
        }

        @include bpMinXSmall {
          &--component {
            margin-right: 0;
            max-width: 467px;
          }
          flex-grow: 1;
          height: 50px;
          margin-right: 8px;
          text-align: left;
        }
        @include bpMinMedium {
          &--component {
            max-width: 467px;
          }
          max-width: 355px;
        }
      }
    }

    &-submit {
      &--component {
        margin: 0 0 0 5px;
        max-width: 102px;
        padding: 16px;
      }

      &--hidden {
        max-width: 80px;
        visibility: hidden;
      }

      margin-bottom: 14px;
      margin-top: 8px;
      padding: 15px;
      width: 100%;

      &:hover,
      &:focus,
      .sent & {
        background-color: map-get($theme-colors, $theme-color-default);
        border: 1px solid map-get($theme-colors, $theme-color-default);
        color: siteColor(vam-black);
      }

      &--footer {
        background-color: siteColor(vam-black);
        border: 1px solid siteColor(vam-white);
        color: siteColor(vam-white);
        @include typeSetting(4, regular);
        height: 50px;
        line-height: inherit;
        margin: 0 0 14px;
        max-width: 122px;
        padding-top: 17px;

        &:hover,
        &:focus,
        .sent & {
          background-color: siteColor(vam-black);
          border: 1px solid siteColor(vam-black);
          color: siteColor(vam-white);
          }
        }

      @include bpMinXSmall {
        &--footer {
          max-width: 158px;
          padding-top: 17px;
        }
        
        &--component {
          max-width: 102px;
        }
        
        margin-top: 0;
        max-width: 150px;
      }
    }
  }

  &__headline {

    &--component {
      font-size: 23px;
      font-weight: 500;
      text-align: center;
    }

    &--footer {
      @include typeSetting(5, regular);
      text-align: left;
    }

    @include typeSetting(4, regular);
    margin: 0;
    text-align: center;

    @include bpMinXSmall {
      @include typeSetting(5, regular);
      margin-bottom: 10px;
      text-align: left;
    }
  }

  &__descriptor {
    @include typeSetting(2, regular);
    
    @include bpMinXSmall {
      @include typeSetting(2, regular);
      margin: 0 0 15px 0;
      max-width: 450px;
      text-align: left;

      &--component {
        font-size: 31px;
        line-height: 1.23;
        text-align: center;
      }
    }
 
    & input {
      display: none;
    }

    .invalid &,
    .sent & {
      color: siteColor(alert-red);
      font-style: normal;
      padding: 20px 0 0;
    }

    .sent & {
      color: siteColor(vam-black);
      font-style: 700;
    }

    &--component {
      margin: auto;
      max-width: 275px;
      padding: 10px 0 30px 0;
    }

    @include bpMinXSmall {
      @include typeSetting(4, regular);
      font-size: 16px;
      font-weight: 500;
      line-height: 26px;
      margin: 0 0 15px 0;
      max-width: 450px;
      text-align: left;
      &--component {
        font-size: 17px;
        line-height: 1.65;
        max-width: none;
        padding-bottom: 15px;
        padding-top: 0;
        text-align: center;
      }
    }

    &--footer {
      margin-bottom: 20px;
    }
  }

  &__info {
    @include typeSetting(1, regular);
    color: siteColor(vam-grey-2);
    text-align: center;

    &--footer, &--component {
      color: siteColor(vam-white);
      font-size: 12px;
      text-align: left;
    }

    &--component {
      display: flex;
      flex-direction: row;
      width: 100%;
    }

    @include bpMinXSmall {
      max-width: 520px;
      text-align: left;
      &--component {
        margin: auto;
        max-width: 575px;
      }
    }
  }

  &__flex-form-container {
    @include bpMinSmall {
      display: flex;
      &-form {
        align-content: center;
        align-items: flex-end;
        display: flex;
        flex-direction: column;
        min-width: 390px;
        width: calc(100% - 500px);
      }
    }
  }

  &__flex-form-container-title {
    @include bpMinSmall {
      width: 600px;
      h1, p {
        margin-right: 50px;
      }
    }
  }
}

